--- a/base.html
+++ b/base.html
@@ -15,8 +15,8 @@
                     <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image">
                 </div>
                 <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Chat support</h4>
-                    <p class="chatbox__description--header">Hi. My name is Sam. How can I help you?</p>
+                    <h4 class="chatbox__heading--header">MumbaiMitra</h4>
+                    <p class="chatbox__description--header">Hi I am MumbaiMitra, I'm Project Mumbai's volunteer assistant</p>
                 </div>
             </div>
             <div class="chatbox__messages">
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="chatbox__button">
-            <button><img src="./images/chatbox-icon.svg" /></button>
+            <button><img src="C:\Users\Abhijit\Downloads\chatbot 2.png" /></button>
         </div>
     </div>
 </div>
